package ooad.project4.model.item;

/**
 * Represents the condition of an item.
 * Provides a method to get a random condition, which is useful for item generation.
 */
public enum Condition {
    POOR,
    FAIR,
    GOOD,
    VERY_GOOD,
    EXCELLENT;
}
